# LDMDroid

./: README.md  action.py  apk.py  app_init.py  avd_controller.py  collect_and_test.py  collect_recorder.py  data_list_arbitrator.py  device.py  dmf.py  guidance.py  llm.py  node.py  pyproject.toml  random_policy.py  start.py  state_propeller.py  test_recorder.py  util.py
evaluation/bugs/: Fridgey #44.md.txt  Fridgey #46.md.txt  Fridgey #47.md.txt  Material Files #1392.md.txt  Material Files #1394.md.txt  Material Notes #416.md.txt  PFA Todo List #158.md.txt  Play NotePad #102.md.txt  Play NotePad #103.md.txt  Print Notes #12.md.txt  Read You #1019.md.txt  Table Habit #270.md.txt  To Don't #342.md.txt  To Don't #343.md.txt  To Don't #352.md.txt
evaluation/dmfs/com.amrdeveloper.linkhub/: Create.json  Delete.json  Read.json  (+2 more)
working/apks/: easynotes.apk  linkhub.apk  nononsensenotes.apk  notally.apk  playnotepad.apk  rankmyfavs.apk  syncanothernotes.apk  tasky.apk
working/init/: com.amrdeveloper.linkhub.txt  com.dessalines.rankmyfavs.txt  com.kin.easynotes.txt  com.maelchiotti.localmaterialnotes.txt  com.maltaisn.notes.sync.txt  com.mshdabiola.playnotepad.foss.txt  com.nononsenseapps.notepad.txt  com.omgodse.notally.txt  com.philkes.notallyx.txt  com.printnotes.printnotes.txt  com.thatsmanmeet.taskyapp.txt  de.dbauer.expensetracker.txt  io.github.friesi23.mhabit.txt  io.github.quillpad.txt  lying.fengfeng.foodrecords.txt  me.ash.reader.txt  me.zhanghai.android.files.txt  org.secuso.privacyfriendlytodolist.txt  rocks.poopjournal.todont.txt  ru.application.homemedkit.txt
(+68 files in other folders)
