[tool.poetry]
name = "LDMDroid"
version = "0.1.0"
description = ""
authors = ["xxy <xxy@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
uiautomator2 = "^3.2.3"
loguru = "^0.7.2"
lxml = "^5.3.0"
openai = "^1.53.0"
pyyaml = "^6.0.2"
json-repair = "^0.30.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
